--- a/package.json
+++ b/package.json
@@ -5,12 +5,16 @@
   "license": "MIT",
   "scripts": {
     "start": "webpack serve --open",
-    "build": "webpack"
+    "build": "webpack",
+    "test": "jest"
   },
   "devDependencies": {
     "@types/html-webpack-plugin": "^3.2.4",
+    "@types/jest": "^26.0.20",
     "clean-webpack-plugin": "^3.0.0",
     "html-webpack-plugin": "^4.5.1",
+    "jest": "^26.6.3",
+    "ts-jest": "^26.4.4",
     "ts-loader": "^8.0.14",
     "typescript": "^4.1.3",
     "webpack": "^5.16.0",
