--- a/package.json
+++ b/package.json
@@ -20,5 +20,9 @@
     "webpack": "^5.16.0",
     "webpack-cli": "^4.4.0",
     "webpack-dev-server": "^3.11.2"
+  },
+  "dependencies": {
+    "@types/p5": "^0.9.1",
+    "p5": "^1.2.0"
   }
 }
