--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "@types/html-webpack-plugin": "^3.2.4",
     "@types/jest": "^26.0.20",
     "clean-webpack-plugin": "^3.0.0",
+    "css-loader": "^5.0.1",
     "html-webpack-plugin": "^4.5.1",
     "jest": "^26.6.3",
+    "style-loader": "^2.0.0",
     "ts-jest": "^26.4.4",
     "ts-loader": "^8.0.14",
     "typescript": "^4.1.3",
